--- a/SwagOrderingApp/SwagOrderingApp/SwagItemHistory.xaml
+++ b/SwagOrderingApp/SwagOrderingApp/SwagItemHistory.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SwagOrderingApp.SwagItemHistory">
+             x:Class="SwagOrderingApp.SwagItemHistory"  BackgroundColor="#fa8" Title="Swag Ordering History" >
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="+" Clicked="OnItemAdded">
+        <ToolbarItem Text="+" Clicked="OnItemAdded" >
             <ToolbarItem.IconImageSource>
                 <OnPlatform x:TypeArguments="ImageSource">
                     <On Platform="Android, UWP"
@@ -12,12 +12,12 @@
             </ToolbarItem.IconImageSource>
         </ToolbarItem>
     </ContentPage.ToolbarItems>
-    <ListView Margin="20"
-              ItemSelected="OnListItemSelected" ItemsSource="{Binding SwagItems}">        
+    <ListView Margin="20" 
+              ItemSelected="OnListItemSelected" ItemsSource="{Binding SwagItems}">
         <ListView.ItemTemplate>
             <DataTemplate>
                 <ViewCell>
-                    <StackLayout Margin="20,0,0,0"
+                    <StackLayout Margin="20,0,0,0" 
                                  Orientation="Horizontal"
                                  HorizontalOptions="FillAndExpand">
                         <Label Text="{Binding Name}"
@@ -41,6 +41,6 @@
                     </StackLayout>
                 </ViewCell>
             </DataTemplate>
-        </ListView.ItemTemplate>
+        </ListView.ItemTemplate>        
     </ListView>
 </ContentPage>
