--- a/SwagOrderingApp/SwagOrderingApp/SwagItemHistory.xaml
+++ b/SwagOrderingApp/SwagOrderingApp/SwagItemHistory.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SwagOrderingApp.SwagItemHistory"  BackgroundColor="#fa8" >
+             x:Class="SwagOrderingApp.SwagItemHistory"  >
     <NavigationPage.TitleView >
         <Label Text="Swag Ordering History" FontSize="Title" TextColor="Green"  VerticalOptions="Center" />
 
